修改功能代码，理前后台接口

--- a/src/styles/paycard.less
+++ b/src/styles/paycard.less
@@ -9,14 +9,14 @@
 }
 
 .card .card-title{
-  margin-top: 10px;
+  padding: 10px 0;
 }
 .card .card-logo{
   height:33px;
 }
 
 .card .card-property{
-  margin-top: 25px;
+  padding: 25px 0;
 }
 
 .card .card-money{
