--- a/src/styles/other.less
+++ b/src/styles/other.less
@@ -27,11 +27,11 @@ input::-webkit-input-placeholder,textarea::-webkit-input-placeholder {
   color: #ccc
 }
 
-img {
-  width: 100%;
-  border: 0;
-  vertical-align: middle
-}
+//img {
+//  width: 100%;
+//  border: 0;
+//  vertical-align: middle
+//}
 
 button,input,select,textarea {
   -webkit-appearance: none;
