--- a/src/styles/other.less
+++ b/src/styles/other.less
@@ -1184,9 +1184,9 @@ body,html {
   background-size: 13.3rem 10.2rem
 }
 
-.card_list {
-  padding: .5rem 1.5rem 2rem 1.5rem
-}
+//.card_list {
+//  padding: .5rem 1.5rem 2rem 1.5rem
+//}
 
 .card_item {
   margin-top: 1rem;
