合入所有功能，准备集成测试

--- a/src/styles/other.less
+++ b/src/styles/other.less
@@ -5,7 +5,7 @@
 }
 
 body {
-  text-align: center;
+  //text-align: center;
   background: #f5f6f6;
   font-size: 1.4rem;
   font-family: "黑体","Microsoft YaHei","Helvetica Neue",Helvetica,STHeiTi,sans-serif;
@@ -326,7 +326,8 @@ body,html {
   height: 100%
 }
 
-.flex .content {
+.content {
+  text-align: center;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
@@ -1184,9 +1185,9 @@ body,html {
   background-size: 13.3rem 10.2rem
 }
 
-//.card_list {
-//  padding: .5rem 1.5rem 2rem 1.5rem
-//}
+.card_list {
+  padding: .5rem 1.5rem 2rem 1.5rem
+}
 
 .card_item {
   margin-top: 1rem;
@@ -1498,7 +1499,7 @@ body,html {
   top: .5rem;
   width: 2.1rem;
   height: 2.1rem;
-  z-index: 93;
+  z-index: 0;
   background: url(../assets/demo/ico_sel.png) center no-repeat;
   background-size: 100% 100%
 }
