测试转赠流程

--- a/src/styles/other.less
+++ b/src/styles/other.less
@@ -1666,8 +1666,8 @@ body,html {
 }
 
 .toux_img img {
-  width: 8rem;
-  height: 8rem;
+  max-width: 8rem;
+  max-height: 8rem;
   border-radius: 8rem
 }
 
