1、修改重定向细节，将wxregister放到lib库中 2、code的opened缓存 3、图片目录调整到images

--- a/src/styles/other.less
+++ b/src/styles/other.less
@@ -144,7 +144,7 @@ a,input,span {
   height: 1.4rem;
   line-height: 1.4rem;
   padding-left: 2rem;
-  background: url(../assets/demo/radio.png) left center no-repeat;
+  background: url(../assets/images/radio.png) left center no-repeat;
   background-size: 1.4rem 1.4rem
 }
 
@@ -153,7 +153,7 @@ a,input,span {
 }
 
 .invoice li p .radio.checked {
-  background-image: url(../assets/demo/radio_ed.png)
+  background-image: url(../assets/images/radio_ed.png)
 }
 
 .invoice li p input {
@@ -162,7 +162,7 @@ a,input,span {
 
 .invoice li p select {
   width: 100%;
-  background: url(../assets/demo/triangle_down.png) right center no-repeat;
+  background: url(../assets/images/triangle_down.png) right center no-repeat;
   background-size: .8rem .5rem
 }
 
@@ -251,7 +251,7 @@ a,input,span {
 .header .location {
   display: block;
   padding-right: 1.8rem;
-  background: url(../assets/demo/arrow_down.png) right center no-repeat;
+  background: url(../assets/images/arrow_down.png) right center no-repeat;
   background-size: 1.2rem .7rem;
   font-size: 1.5rem;
   color: #666
@@ -261,7 +261,7 @@ a,input,span {
   display: block;
   width: 5rem;
   height: 4.5rem;
-  background: url(../assets/demo/menu.png) center no-repeat;
+  background: url(../assets/images/menu.png) center no-repeat;
   background-size: 2rem 1.6rem
 }
 
@@ -342,7 +342,7 @@ body,html {
 }
 
 .content_img {
-  background: url(../assets/demo/index_bg.png) no-repeat;
+  background: url(../assets/images/index_bg.png) no-repeat;
   background-size: 100% 603px;
   width: 100%;
   height: 603px
@@ -350,7 +350,7 @@ body,html {
 
 @media all and (max-width: 374px) {
   .index_ad {
-    background:url(../assets/demo/index_ad.png) no-repeat;
+    background:url(../assets/images/index_ad.png) no-repeat;
     background-size: 320px 260px;
     position: relative;
     width: 320px;
@@ -391,7 +391,7 @@ body,html {
 
 @media all and (min-width: 375px) {
   .index_ad {
-    background:url(../assets/demo/index_ad.png) no-repeat;
+    background:url(../assets/images/index_ad.png) no-repeat;
     background-size: 375px 286px;
     position: relative;
     width: 375px;
@@ -546,7 +546,7 @@ body,html {
   left: 0;
   right: 0;
   height: 4px;
-  background: url(../assets/demo/ico_point.png) left center repeat-x;
+  background: url(../assets/images/ico_point.png) left center repeat-x;
   background-size: 8px 4px
 }
 
@@ -636,7 +636,7 @@ body,html {
 }
 
 .gift_win {
-  background: url(../assets/demo/gift_win.png) no-repeat;
+  background: url(../assets/images/gift_win.png) no-repeat;
   background-size: 100% 246px;
   width: 100%;
   height: 246px;
@@ -648,7 +648,7 @@ body,html {
   height: 134px;
   margin: 0 auto;
   position: relative;
-  background: url(../assets/demo/ico_loading.png) no-repeat;
+  background: url(../assets/images/ico_loading.png) no-repeat;
   background-size: 206px 134px
 }
 
@@ -705,7 +705,7 @@ body,html {
   font-size: 1.2rem;
   color: #999;
   text-align: left;
-  background: url(../assets/demo/ico_tip.png) left 1.4rem no-repeat;
+  background: url(../assets/images/ico_tip.png) left 1.4rem no-repeat;
   background-size: 1.6rem 1.4rem
 }
 
@@ -781,7 +781,7 @@ body,html {
   display: inline-block;
   width: 8.6rem;
   height: 10.7rem;
-  background: url(../assets/demo/ico_nodata.png) no-repeat;
+  background: url(../assets/images/ico_nodata.png) no-repeat;
   background-size: 8.6rem 10.7rem
 }
 
@@ -852,17 +852,17 @@ body,html {
 }
 
 .ico_success {
-  background: url(../assets/demo/ico_success.png) no-repeat;
+  background: url(../assets/images/ico_success.png) no-repeat;
   background-size: 10rem 10rem
 }
 
 .ico_fail {
-  background: url(../assets/demo/ico_fail.png) no-repeat;
+  background: url(../assets/images/ico_fail.png) no-repeat;
   background-size: 10rem 10rem
 }
 
 .ico_chuli {
-  background: url(../assets/demo/ico_chuli.png) no-repeat;
+  background: url(../assets/images/ico_chuli.png) no-repeat;
   background-size: 10rem 10rem
 }
 
@@ -889,7 +889,7 @@ body,html {
   font-size: 1.2rem;
   color: #999;
   text-align: left;
-  background: url(../assets/demo/ico_tip2.png) left 1.4rem no-repeat;
+  background: url(../assets/images/ico_tip2.png) left 1.4rem no-repeat;
   background-size: 1.25rem 1.25rem
 }
 
@@ -1046,14 +1046,14 @@ body,html {
   padding-left: 2rem;
   min-height: 1.5rem;
   margin-bottom: .2rem;
-  background: url(../assets/demo/ico_addr.png) left .3rem no-repeat;
+  background: url(../assets/images/ico_addr.png) left .3rem no-repeat;
   background-size: 1rem 1.3rem
 }
 
 .store_tel {
   padding-left: 2rem;
   min-height: 1.5rem;
-  background: url(../assets/demo/ico_tel.png) left .3rem no-repeat;
+  background: url(../assets/images/ico_tel.png) left .3rem no-repeat;
   background-size: 1rem 1.3rem
 }
 
@@ -1181,7 +1181,7 @@ body,html {
   display: inline-block;
   width: 13.3rem;
   height: 10.2rem;
-  background: url(../assets/demo/ico_nocard.png) no-repeat;
+  background: url(../assets/images/ico_nocard.png) no-repeat;
   background-size: 13.3rem 10.2rem
 }
 
@@ -1261,7 +1261,7 @@ body,html {
   left: 0;
   right: 0;
   height: .4rem;
-  background: url(../assets/demo/ico_point.png) left center repeat-x;
+  background: url(../assets/images/ico_point.png) left center repeat-x;
   background-size: .8rem .4rem
 }
 
@@ -1299,7 +1299,7 @@ body,html {
   display: block;
   width: 4.8rem;
   height: 4.5rem;
-  background: url(../assets/demo/ico_scan.png) center no-repeat;
+  background: url(../assets/images/ico_scan.png) center no-repeat;
   background-size: 1.8rem 1.8rem
 }
 
@@ -1326,14 +1326,14 @@ body,html {
   min-height: 1.5rem;
   line-height: 1.5rem;
   padding-left: 2rem;
-  background: url(../assets/demo/checkbox.png) left center no-repeat;
+  background: url(../assets/images/checkbox.png) left center no-repeat;
   background-size: 1.5rem 1.5rem;
   color: #999;
   text-align: left
 }
 
 .agree_p.on {
-  background-image: url(../assets/demo/checkbox_ed.png)
+  background-image: url(../assets/images/checkbox_ed.png)
 }
 
 .agree_p span {
@@ -1346,7 +1346,7 @@ body,html {
 
 .walmart_logo {
   height: 13.5rem;
-  background: url(../assets/demo/walmart_logo.png) center no-repeat #0477c3;
+  background: url(../assets/images/walmart_logo.png) center no-repeat #0477c3;
   background-size: 14.5rem 4.7rem
 }
 
@@ -1373,32 +1373,32 @@ body,html {
 }
 
 .ico_nav1 {
-  background: url(../assets/demo/ico_wal01.png) center 3.1rem no-repeat;
+  background: url(../assets/images/ico_wal01.png) center 3.1rem no-repeat;
   background-size: 3rem 2.2rem
 }
 
 .ico_nav2 {
-  background: url(../assets/demo/ico_wal02.png) center 3.1rem no-repeat;
+  background: url(../assets/images/ico_wal02.png) center 3.1rem no-repeat;
   background-size: 3rem 2.2rem
 }
 
 .ico_nav3 {
-  background: url(../assets/demo/ico_wal03.png) center 3.1rem no-repeat;
+  background: url(../assets/images/ico_wal03.png) center 3.1rem no-repeat;
   background-size: 3rem 2.2rem
 }
 
 .ico_nav4 {
-  background: url(../assets/demo/ico_wal04.png) center 3.1rem no-repeat;
+  background: url(../assets/images/ico_wal04.png) center 3.1rem no-repeat;
   background-size: 3rem 2.2rem
 }
 
 .ico_nav5 {
-  background: url(../assets/demo/ico_wal05.png) center 2.5rem no-repeat;
+  background: url(../assets/images/ico_wal05.png) center 2.5rem no-repeat;
   background-size: 2rem 2.8rem
 }
 
 .ico_nav6 {
-  background: url(../assets/demo/ico_wal06.png) center 2.9rem no-repeat;
+  background: url(../assets/images/ico_wal06.png) center 2.9rem no-repeat;
   background-size: 2.5rem 2.5rem
 }
 
@@ -1412,7 +1412,7 @@ body,html {
   padding: 0 3.2rem;
   font-size: 1.2rem;
   color: #0477c3;
-  background: url(../assets/demo/ico_line.png) left center no-repeat,url(../assets/demo/ico_line.png) right center no-repeat;
+  background: url(../assets/images/ico_line.png) left center no-repeat,url(../assets/images/ico_line.png) right center no-repeat;
   background-size: 2.5rem .1rem,2.5rem .1rem
 }
 
@@ -1440,7 +1440,7 @@ body,html {
   content: "";
   width: 6.4rem;
   height: 4.2rem;
-  background: url(../assets/demo/ico_donation.png) no-repeat;
+  background: url(../assets/images/ico_donation.png) no-repeat;
   background-size: 6.4rem 4.2rem;
   z-index: 91
 }
@@ -1459,7 +1459,7 @@ body,html {
   text-align: left;
   font-size: 1.2rem;
   color: #e00b0b;
-  background: url(../assets/demo/error.png) left center no-repeat;
+  background: url(../assets/images/error.png) left center no-repeat;
   background-size: 1.2rem 1.2rem
 }
 
@@ -1500,12 +1500,12 @@ body,html {
   width: 2.1rem;
   height: 2.1rem;
   z-index: 0;
-  background: url(../assets/demo/ico_sel.png) center no-repeat;
+  background: url(../assets/images/ico_sel.png) center no-repeat;
   background-size: 100% 100%
 }
 
 .donation_dov .card_item.on:after {
-  background: url(../assets/demo/ico_selon.png) center no-repeat;
+  background: url(../assets/images/ico_selon.png) center no-repeat;
   background-size: 100% 100%
 }
 
@@ -1581,7 +1581,7 @@ body,html {
   margin: 0 1.5rem;
   padding: 1rem 1.8rem;
   text-align: left;
-  background: url(../assets/demo/ico_tip2.png) left center no-repeat;
+  background: url(../assets/images/ico_tip2.png) left center no-repeat;
   background-size: 1.2rem 1.2rem
 }
 
@@ -1628,7 +1628,7 @@ body,html {
   display: inline-block;
   width: 18rem;
   height: 10.5rem;
-  background: url(../assets/demo/ico_share.png) no-repeat;
+  background: url(../assets/images/ico_share.png) no-repeat;
   background-size: 18rem 10.5rem
 }
 
@@ -1648,7 +1648,7 @@ body,html {
   left: 0;
   right: 0;
   height: .4rem;
-  background: url(../assets/demo/ico_point.png) left center repeat-x;
+  background: url(../assets/images/ico_point.png) left center repeat-x;
   background-size: .8rem .4rem
 }
 
@@ -1797,7 +1797,7 @@ body,html {
   content: "";
   height: 4.5rem;
   width: 1rem;
-  background: url(../assets/demo/arrow_right.png) center right no-repeat;
+  background: url(../assets/images/arrow_right.png) center right no-repeat;
   background-size: .6rem 1.1rem
 }
 
@@ -1810,7 +1810,7 @@ body,html {
   font-size: 1.4rem;
   color: #0077c3;
   padding-left: 2rem;
-  background: url(../assets/demo/ico_btel.png) left center no-repeat;
+  background: url(../assets/images/ico_btel.png) left center no-repeat;
   background-size: 1rem 1.3rem;
   height: 2rem;
   line-height: 2rem
@@ -1899,22 +1899,22 @@ body,html {
 }
 
 .ico_nav7 {
-  background: url(../assets/demo/ico_wal07.png) center 3.1rem no-repeat;
+  background: url(../assets/images/ico_wal07.png) center 3.1rem no-repeat;
   background-size: 3rem 2.2rem
 }
 
 .ico_nav8 {
-  background: url(../assets/demo/ico_wal08.png) center 3.1rem no-repeat;
+  background: url(../assets/images/ico_wal08.png) center 3.1rem no-repeat;
   background-size: 3rem 2.2rem
 }
 
 .ico_nav9 {
-  background: url(../assets/demo/ico_wal09.png) center 2.5rem no-repeat;
+  background: url(../assets/images/ico_wal09.png) center 2.5rem no-repeat;
   background-size: 2rem 2.8rem
 }
 
 .ico_nav10 {
-  background: url(../assets/demo/ico_wal10.png) center 3.1rem no-repeat;
+  background: url(../assets/images/ico_wal10.png) center 3.1rem no-repeat;
   background-size: 3rem 2.2rem
 }
 
@@ -1943,7 +1943,7 @@ body,html {
   display: inline-block;
   width: 14rem;
   height: 8rem;
-  background: url(../assets/demo/ico_donation_tip.png) no-repeat;
+  background: url(../assets/images/ico_donation_tip.png) no-repeat;
   background-size: 14rem 8rem
 }
 
@@ -1958,7 +1958,7 @@ body,html {
   font-weight: 700;
   color: #333;
   text-align: left;
-  background: url(../assets/demo/ico_pay.png) left center no-repeat;
+  background: url(../assets/images/ico_pay.png) left center no-repeat;
   background-size: 3.6rem 3.6rem
 }
 
@@ -1999,7 +1999,7 @@ body,html {
 
 .cbs_rt {
   padding: 1.2rem 2.1rem 0 0;
-  background: url(../assets/demo/arrow_right.png) right center no-repeat;
+  background: url(../assets/images/arrow_right.png) right center no-repeat;
   background-size: .6rem 1.1rem
 }
 
@@ -2051,7 +2051,7 @@ body,html {
   right: .5rem;
   width: 1.4rem;
   height: 1.4rem;
-  background: url(../assets/demo/ico_use.png) center no-repeat;
+  background: url(../assets/images/ico_use.png) center no-repeat;
   background-size: 1.4rem 1.4rem;
   z-index: 11
 }
@@ -2095,7 +2095,7 @@ body,html {
   z-index: 11;
   width: 3.1rem;
   height: 3.1rem;
-  background: url(../assets/demo/close.png) center no-repeat;
+  background: url(../assets/images/close.png) center no-repeat;
   background-size: 1.3rem 1.3rem
 }
 
@@ -2260,12 +2260,12 @@ body,html {
   display: inline-block;
   padding-left: 1.8rem;
   min-height: 1.2rem;
-  background: url(../assets/demo/ico_refresh.png) left center no-repeat;
+  background: url(../assets/images/ico_refresh.png) left center no-repeat;
   background-size: 1.2rem 1.2rem
 }
 
 .ico_nav11 {
-  background: url(../assets/demo/ico_wal11.png) center 2.9rem no-repeat;
+  background: url(../assets/images/ico_wal11.png) center 2.9rem no-repeat;
   background-size: 2.5rem 2.5rem
 }
 
@@ -2280,7 +2280,7 @@ body,html {
   right: 0;
   width: 2.6rem;
   height: 2.2rem;
-  background: url(../assets/demo/ico_sbg_sbtn.png) center no-repeat;
+  background: url(../assets/images/ico_sbg_sbtn.png) center no-repeat;
   background-size: 1.7rem 1.7rem;
   z-index: 121
 }
@@ -2298,7 +2298,7 @@ body,html {
   left: 0;
   right: 0;
   height: .4rem;
-  background: url(../assets/demo/ico_point.png) left center repeat-x;
+  background: url(../assets/images/ico_point.png) left center repeat-x;
   background-size: .8rem .4rem
 }
 
@@ -2466,7 +2466,7 @@ body,html {
 
 .card_total .num p b.btn_minus {
   border-radius: 5px 0 0 5px;
-  background: url(../assets/demo/btn_minus.png) center center no-repeat;
+  background: url(../assets/images/btn_minus.png) center center no-repeat;
   background-size: 1.1rem .25rem
 }
 
@@ -2480,7 +2480,7 @@ body,html {
 
 .card_total .num p b.btn_plus {
   border-radius: 0 5px 5px 0;
-  background: url(../assets/demo/btn_plus.png) center center no-repeat;
+  background: url(../assets/images/btn_plus.png) center center no-repeat;
   background-size: 1.25rem 1.25rem
 }
 
@@ -2528,13 +2528,13 @@ body,html {
   height: 1.5rem;
   line-height: 1.5rem;
   padding-left: 2rem;
-  background: url(../assets/demo/checkbox.png) left center no-repeat;
+  background: url(../assets/images/checkbox.png) left center no-repeat;
   background-size: 1.5rem 1.5rem;
   color: #999
 }
 
 .agree_wrap .agree_r.on {
-  background-image: url(../assets/demo/checkbox_ed.png)
+  background-image: url(../assets/images/checkbox_ed.png)
 }
 
 .agree_wrap .agree_r span {
@@ -2554,7 +2554,7 @@ body,html {
 
 .error {
   padding-left: 1.5rem;
-  background: url(../assets/demo/error.png) left center no-repeat;
+  background: url(../assets/images/error.png) left center no-repeat;
   background-size: 1.1rem 1.1rem;
   color: #e00b0b;
   text-align: left;
@@ -2586,7 +2586,7 @@ body,html {
   position: absolute;
   width: 2.5rem;
   height: 2.5rem;
-  background: url(../assets/demo/close.png) center center no-repeat;
+  background: url(../assets/images/close.png) center center no-repeat;
   background-size: 1.3rem 1.3rem;
   right: 1rem;
   top: 1rem
@@ -2620,7 +2620,7 @@ body,html {
   display: inline-block;
   width: 1.2rem;
   height: 1.2rem;
-  background: url(../assets/demo/tips.png) no-repeat;
+  background: url(../assets/images/tips.png) no-repeat;
   background-size: 100% 100%;
   margin-right: .4rem;
   vertical-align: middle
@@ -2665,12 +2665,12 @@ body,html {
 }
 
 .city_search b.ico_srh {
-  background: url(../assets/demo/search.png) center center no-repeat;
+  background: url(../assets/images/search.png) center center no-repeat;
   background-size: 1.4rem 1.4rem
 }
 
 .city_search b.ico_clear {
-  background: url(../assets/demo/clear.png) center center no-repeat;
+  background: url(../assets/images/clear.png) center center no-repeat;
   background-size: 1.4rem 1.4rem
 }
 
@@ -2717,7 +2717,7 @@ body,html {
   display: block;
   width: 1.4rem;
   height: 2.1rem;
-  background: url(../assets/demo/location.png) no-repeat;
+  background: url(../assets/images/location.png) no-repeat;
   background-size: 100% 100%
 }
 
@@ -2757,7 +2757,7 @@ body,html {
   display: block;
   width: .6rem;
   height: 1.1rem;
-  background: url(../assets/demo/arrow_right.png) no-repeat;
+  background: url(../assets/images/arrow_right.png) no-repeat;
   background-size: 100% 100%
 }
 
@@ -2769,7 +2769,7 @@ body,html {
   display: inline-block;
   width: 12.6rem;
   height: 10rem;
-  background: url(../assets/demo/no_data.png) no-repeat;
+  background: url(../assets/images/no_data.png) no-repeat;
   background-size: 100% 100%
 }
 
@@ -2782,7 +2782,7 @@ body,html {
   font-size: 1.2rem;
   color: #e00b0b;
   padding-left: 1.5rem;
-  background: url(../assets/demo/error.png) left center no-repeat;
+  background: url(../assets/images/error.png) left center no-repeat;
   background-size: 1.1rem 1.1rem
 }
 
@@ -2814,12 +2814,12 @@ body,html {
   display: inline-block;
   height: 1.4rem;
   padding-left: 2rem;
-  background: url(../assets/demo/radio.png) left center no-repeat;
+  background: url(../assets/images/radio.png) left center no-repeat;
   background-size: 1.4rem 1.4rem
 }
 
 .write_info li>div p.on {
-  background-image: url(../assets/demo/radio_ed.png)
+  background-image: url(../assets/images/radio_ed.png)
 }
 
 .write_info li>div p:last-child {
@@ -2836,7 +2836,7 @@ body,html {
 }
 
 .fselect {
-  background: url(../assets/demo/triangle_down.png) right center no-repeat;
+  background: url(../assets/images/triangle_down.png) right center no-repeat;
   background-size: .8rem .5rem
 }
 
