--- a/src/demos/style.css
+++ b/src/demos/style.css
@@ -1,12 +1,14 @@
 @font-face {
   font-family: 'vux-demo';
-  url('//wx.cdn.pipapay.com/static/fonts/font_1466303154_3970063.woff') format('woff'), /* chrome、firefox */
-  url('//wx.cdn.pipapay.com/static/fonts/font_1466303154_3970063.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-  url('//wx.cdn.pipapay.com/static/fonts/font_1466303154_3970063.svg#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('//at.alicdn.com/t/font_1466303154_3970063.eot'); /* IE9*/
+  src: url('//at.alicdn.com/t/font_1466303154_3970063.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('//at.alicdn.com/t/font_1466303154_3970063.woff') format('woff'), /* chrome、firefox */
+  url('//at.alicdn.com/t/font_1466303154_3970063.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+  url('//at.alicdn.com/t/font_1466303154_3970063.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .demo-icon {
-  font-family: 'vux-demo';
+  /*font-family: 'vux-demo';*/
   font-size:20px;
   padding-right: 10px;
   color: #04BE02;
