--- a/src/styles/other.less
+++ b/src/styles/other.less
@@ -341,94 +341,6 @@ body,html {
   background: #2d52d4
 }
 
-.content_img {
-  background: url(../assets/images/index_bg.png) no-repeat;
-  background-size: 100% 603px;
-  width: 100%;
-  height: 603px
-}
-
-@media all and (max-width: 374px) {
-  .index_ad {
-    background:url(../assets/images/index_ad.png) no-repeat;
-    background-size: 320px 260px;
-    position: relative;
-    width: 320px;
-    height: 260px;
-    margin: -603px auto 0 auto
-  }
-
-  .index_logo {
-    position: absolute;
-    left: 95px;
-    top: 63px
-  }
-
-  .index_logo img {
-    width: 40px;
-    height: 40px
-  }
-
-  .left_border {
-    height: 15px;
-    width: 1px;
-    position: absolute;
-    left: 90px;
-    top: 76px
-  }
-
-  .index_logo1 {
-    position: absolute;
-    left: 45px;
-    top: 63px
-  }
-
-  .index_logo1 img {
-    width: 40px;
-    height: 40px
-  }
-}
-
-@media all and (min-width: 375px) {
-  .index_ad {
-    background:url(../assets/images/index_ad.png) no-repeat;
-    background-size: 375px 286px;
-    position: relative;
-    width: 375px;
-    height: 286px;
-    margin: -603px auto 0 auto
-  }
-
-  .index_logo {
-    position: absolute;
-    left: 109px;
-    top: 69px
-  }
-
-  .index_logo img {
-    width: 50px;
-    height: 50px
-  }
-
-  .left_border {
-    height: 15px;
-    width: 1px;
-    position: absolute;
-    left: 104px;
-    top: 86px
-  }
-
-  .index_logo1 {
-    position: absolute;
-    left: 50px;
-    top: 69px
-  }
-
-  .index_logo1 img {
-    width: 50px;
-    height: 50px
-  }
-}
 
 .input_bg {
   margin: 1rem 1.5rem;
@@ -633,23 +545,6 @@ body,html {
 
 .get_list li div:nth-child(3) em {
   color: #f71420
-}
-
-.gift_win {
-  background: url(../assets/images/gift_win.png) no-repeat;
-  background-size: 100% 246px;
-  width: 100%;
-  height: 246px;
-  padding-top: 90px
-}
-
-.add_logo {
-  width: 206px;
-  height: 134px;
-  margin: 0 auto;
-  position: relative;
-  background: url(../assets/images/ico_loading.png) no-repeat;
-  background-size: 206px 134px
 }
 
 .big_logo {
@@ -1200,7 +1095,7 @@ body,html {
 .card_itop {
   display: -webkit-box;
   height: 5.5rem;
-  background: #0077c3;
+  background: #09bb07;
   padding: 1.8rem 0
 }
 
@@ -1208,14 +1103,12 @@ body,html {
   display: block;
   width: 5.5rem;
   height: 5.5rem;
-  border-radius: 5.5rem;
   overflow: hidden
 }
 
 .card_img img {
   width: 5.5rem;
   height: 5.5rem;
-  border-radius: 5.5rem
 }
 
 .card_it1 {
@@ -1340,15 +1233,9 @@ body,html {
   color: #0077c3
 }
 
-.min_height {
-  min-height: 38rem
-}
-
-.walmart_logo {
-  height: 13.5rem;
-  background: url(../assets/images/walmart_logo.png) center no-repeat #0477c3;
-  background-size: 14.5rem 4.7rem
-}
+//.min_height {
+//  min-height: 38rem
+//}
 
 .wal_ibox {
   display: -webkit-box;
@@ -1400,6 +1287,10 @@ body,html {
 .ico_nav6 {
   background: url(../assets/images/ico_wal06.png) center 2.9rem no-repeat;
   background-size: 2.5rem 2.5rem
+}
+.ico_nav8 {
+  background: url(../assets/images/ico_wal08.png) center 3.1rem no-repeat;
+  background-size: 3rem 2.2rem
 }
 
 .wal_ibtm {
