修改跳转流程

--- a/src/styles/other.less
+++ b/src/styles/other.less
@@ -1524,7 +1524,7 @@ body,html {
 }
 
 .lk_top {
-  background-color: #0077c3;
+  background-color: #04be02;
   height: 24rem;
   position: relative;
   margin-bottom: 1rem;
