--- a/src/styles/other.less
+++ b/src/styles/other.less
@@ -1086,7 +1086,7 @@ body,html {
 
 .card_item {
   margin-top: 1rem;
-  border-radius: 8px;
+  border-radius: 10px;
   background: #fff;
   overflow: hidden;
   box-shadow: 1px 2px 3px #d0d1d1
@@ -1408,9 +1408,10 @@ body,html {
   top: 0;
   left: 0;
   bottom: 0;
-  background: rgba(0,0,0,.2);
-  z-index: 91;
-  pointer-events: none
+  background: rgba(0,0,0,.1);
+  z-index: 10;
+  pointer-events: none;
+  border-radius: 10px;
 }
 
 .donation_foter {
