--- a/src/styles/other.less
+++ b/src/styles/other.less
@@ -1085,7 +1085,7 @@ body,html {
 }
 
 .card_item {
-  margin-top: 1rem;
+  margin-bottom: 1rem;
   border-radius: 10px;
   background: #fff;
   overflow: hidden;
