用户未注册的异常流程优化

--- a/src/styles/other.less
+++ b/src/styles/other.less
@@ -1096,13 +1096,13 @@ body,html {
   display: -webkit-box;
   height: 5.5rem;
   background: #09bb07;
-  padding: 1.8rem 0
+  padding: .8rem 0
 }
 
 .card_img {
   display: block;
-  width: 5.5rem;
-  height: 5.5rem;
+  width: 4rem;
+  height: 4rem;
   overflow: hidden
 }
 
@@ -1112,11 +1112,11 @@ body,html {
 }
 
 .card_it1 {
-  padding: 0 1.5rem
+  padding: 10px 16px;
 }
 
 .card_it2 {
-  font-size: 2rem;
+  font-size: 1.9rem;
   color: #fff;
   -webkit-box-flex: 1;
   text-align: left;
