--- a/src/styles/other.less
+++ b/src/styles/other.less
@@ -1107,12 +1107,12 @@ body,html {
 }
 
 .card_img img {
-  width: 5.5rem;
-  height: 5.5rem;
+  width: 40px;
+  height: 40px;
 }
 
 .card_it1 {
-  padding: 10px 16px;
+  padding: 12px 10px 0 20px;
 }
 
 .card_it2 {
@@ -1120,7 +1120,7 @@ body,html {
   color: #fff;
   -webkit-box-flex: 1;
   text-align: left;
-  line-height: 5.5rem
+  line-height: 5.2rem
 }
 
 .card_ibtm {
