--- a/src/styles/other.less
+++ b/src/styles/other.less
@@ -334,7 +334,8 @@ body,html {
   flex: 1;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
-  position: relative
+  position: relative;
+  padding: 0 5%;
 }
 
 .content_index {
@@ -1089,38 +1090,38 @@ body,html {
   border-radius: 10px;
   background: #fff;
   overflow: hidden;
-  box-shadow: 1px 2px 3px #d0d1d1
+  box-shadow: 1px 2px 3px #d0d1d1;
 }
 
 .card_itop {
   display: -webkit-box;
   height: 5.5rem;
   background: #09bb07;
-  padding: .8rem 0
+  padding: 0.6rem 0
 }
 
 .card_img {
   display: block;
-  width: 4rem;
-  height: 4rem;
+  width: 5rem;
+  height: 5rem;
   overflow: hidden
 }
 
 .card_img img {
-  width: 40px;
-  height: 40px;
+  width: 4rem;
+  height: 4rem;
 }
 
 .card_it1 {
-  padding: 12px 10px 0 20px;
+  padding: 0.7rem 1.5rem
 }
 
 .card_it2 {
-  font-size: 1.9rem;
+  font-size: 2rem;
   color: #fff;
   -webkit-box-flex: 1;
   text-align: left;
-  line-height: 5.2rem
+  line-height: 5.5rem
 }
 
 .card_ibtm {
@@ -1128,7 +1129,7 @@ body,html {
   display: -webkit-box;
   height: 3.4rem;
   line-height: 3.4rem;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   color: #999;
   padding: 0 1.5rem
 }
@@ -1254,7 +1255,7 @@ body,html {
 
 .nav_p {
   padding-top: 6.5rem;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   line-height: 2rem;
   color: #5d5d5d
 }
