--- a/src/styles/other.less
+++ b/src/styles/other.less
@@ -94,8 +94,7 @@ a,input,span {
 }
 
 .b_top_btm:before {
-  border-top: 1px solid #d1d1d1;
-  border-bottom: 1px solid #d1d1d1
+  border: 1px solid #d1d1d1;
 }
 
 .b_full2:before {
